Record the request-path benchmark baseline